--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ panic = 'abort'
 
 [dependencies]
 humantime = "2"
+pest = "2.6"
+pest_derive = "2.6"
 time = { version = "0.3", features = ["formatting", "local-offset", "parsing"] }
 
 # cli
@@ -35,7 +37,6 @@ tracing-subscriber = "0.3.17"
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
-tera = "1.19.0"
 tracing-log = "0.1.3"
 
 [dev-dependencies]
