--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           components: clippy, rustfmt
 
+      - uses: Swatinem/rust-cache@v2
+
       - name: Install latest just release
         uses: taiki-e/install-action@just
 
@@ -44,6 +46,8 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ env.MIN_SUPPORTED_RUST_VERSION }}
+
+      - uses: Swatinem/rust-cache@v2
 
       - name: Install latest just release
         uses: taiki-e/install-action@just
@@ -73,6 +77,8 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           target: ${{ matrix.target }}
+
+      - uses: Swatinem/rust-cache@v2
 
       - name: Show version information
         shell: bash
