--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
           staging="${{ env.BIN_NAME }}-${{ env.RELEASE_VERSION }}-${{ matrix.target }}"
 
           mkdir -p "$staging"/{complete,doc}
-          cp {README.md,LICENSE-*} "$staging/"
+          cp {README.md,LICENSE*} "$staging/"
           cp {CHANGELOG.md,docs/*} "$staging/doc/"
 
           if [ "${{ matrix.os }}" = "windows-2019" ]; then
