--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,12 +54,12 @@ jobs:
       - name: Build archive
         shell: bash
         run: |
-          outdir="./target/${{ env.TARGET_DIR }}/release"
+          outdir="./target/release"
           staging="${{ env.BIN_NAME }}-${{ env.RELEASE_VERSION }}-${{ matrix.target }}"
 
           mkdir -p "$staging"/{complete,doc}
-          cp {README.md,LICENSE*} "$staging/"
-          cp {CHANGELOG.md,docs/*} "$staging/doc/"
+          cp -r {README.md,LICENSE*} "$staging/"
+          cp -r {CHANGELOG.md,docs/*} "$staging/doc/"
 
           if [ "${{ matrix.os }}" = "windows-2019" ]; then
             cp "target/${{ matrix.target }}/release/${{ env.BIN_NAME }}.exe" "$staging/"
