--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,10 @@ lto = true
 panic = 'abort'
 
 [dependencies]
+chrono = "0.4.26"
 humantime = "2"
 pest = "2.6"
 pest_derive = "2.6"
-time = { version = "0.3", features = ["formatting", "local-offset", "parsing"] }
 
 # cli
 clap = { version = "4.3", features = ["suggestions", "color", "cargo", "derive"] }
