--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,8 @@ jobs:
       - name: Install latest just release
         uses: taiki-e/install-action@just
 
+      - uses: taiki-e/install-action@nextest
+
       - name: Run tests
         run: just test
 
