--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,10 @@ jobs:
       - name: Install latest dprint release
         uses: taiki-e/install-action@dprint
 
+      - uses: taiki-e/install-action@v2
+        with:
+          tool: pest_fmt
+
       - name: Ensure `fmt` has been run
         run:  just fmt-check
 
