build: prefix release commit with "v"

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,6 @@ bin-dir = "{ bin }{ binary-ext }"
 pkg-fmt = "tgz"
 
 [package.metadata.release]
-tag-message = "{{version}}"
-pre-release-commit-message = "{{version}}"
+tag-message = "v{{version}}"
+pre-release-commit-message = "v{{version}}"
 pre-release-hook = ["just", "_prepare-release", "{{version}}"]
