--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,12 +26,17 @@ jobs:
           echo "RELEASE_VERSION=${GITHUB_REF:11}" >> $GITHUB_ENV
           echo ${{ env.RELEASE_VERSION }}
 
+      - name: Checkout current tag
+        shell: bash
+        run: |
+          git checkout ${{ env.RELEASE_VERSION }}
+
       - name: Generate a changelog
         uses: orhun/git-cliff-action@v2
         id: git-cliff
         with:
           config: configs/cliff.toml
-          args: -vv --tag ${{ env.RELEASE_VERSION }} --strip header
+          args: -vv --strip header --current 
         env:
           OUTPUT: CHANGELOG.md.tmp
 
