--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ clap-verbosity-flag = "2.0.1"
 owo-colors = { version = "3.5", features = ["supports-colors"] }
 
 # error
-miette = { version = "5.9", features = ["fancy"] }
+miette = { version = "5.10", features = ["fancy"] }
 thiserror = "1.0"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
@@ -54,4 +54,4 @@ sign-commit = true
 sign-tag = true
 tag-message = "v{{version}}"
 pre-release-commit-message = "v{{version}}"
-pre-release-hook = ["just", "_prepare-release", "{{version}}"]
+pre-release-hook = ["just", "_release-prepare", "{{version}}"]
