--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,13 @@ lto = true
 panic = 'abort'
 
 [dependencies]
-chrono = "0.4.26"
+chrono = "0.4.28"
 humantime = "2"
 pest = "2.7"
 pest_derive = "2.7"
 
 # cli
-clap = { version = "4.3", features = ["suggestions", "color", "cargo", "derive"] }
+clap = { version = "4.4", features = ["suggestions", "color", "cargo", "derive"] }
 clap-verbosity-flag = "2.0.1"
 owo-colors = { version = "3.5", features = ["supports-colors"] }
 
@@ -34,6 +34,7 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 
 # config
+num-traits = "0.2.16"
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
