--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: taiki-e/install-action@dprint
       - uses: taiki-e/install-action@v2
         with:
-          tool: pest_fmt
+          tool: pest_fmt,typos-cli
 
       - name: Ensure `fmt` has been run
         run:  just fmt-check
