--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 
 # config
+jiff = "0.1.4"
 num-traits = "0.2.19"
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
